Fix paint invalidation for composited vertical-rl having overflow

Previously we special cased in slowMapToVisualRectInAncestorSpace()
in PaintInvalidationState.cpp for LayoutView background invalidation
which was because LayoutView::localOverflowRectForPaintInvalidation()
was in physical coordinates while other
localOverflowRectForPaintInvalidation() implementations are in flipped
physical coordinates.

This CL removes the special case, but let
LayoutView::localOverflowRectForPaintInvalidation() returns a rect in
flipped physical coordinates.

BUG=650417
TEST=paint/invalidation/composited-vertical-rl-overflow.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2371933003
Cr-Commit-Position: refs/heads/master@{#421362}

Former-commit-id: 049d91617706a0fd7f96e861364e4340c966d855